force-app/main/default/objects/Book__c/fields/BookTitle__c.field-meta.xml
<CustomField>
    <fullName>BookTitle__c</fullName>
    <label>BookTitle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>