force-app/main/default/objects/Book__c/fields/CopyCount__c.field-meta.xml
<CustomField>
    <fullName>CopyCount__c</fullName>
    <label>CopyCount</label>
    <summaryForeignKey>CopyDetails__c.Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>