force-app/main/default/objects/Book__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>comic book</fullName>
            </value>
            <value>
                <fullName>science and technology</fullName>
            </value>
            <value>
                <fullName>financial related book</fullName>
            </value>
            <value>
                <fullName>mathematical related book</fullName>
            </value>
            <value>
                <fullName>information technology book</fullName>
            </value>
            <value>
                <fullName>social science book</fullName>
            </value>
            <value>
                <fullName>novel</fullName>
            </value>
            <value>
                <fullName>Autobiographies</fullName>
            </value>
            <value>
                <fullName>Historical Fiction book</fullName>
            </value>
            <value>
                <fullName>Accounting related book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>