force-app/main/default/objects/Book__c/validationRules/Author_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Author_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Author__c )</errorConditionFormula>
    <errorDisplayField>Author__c</errorDisplayField>
    <errorMessage>Author Required</errorMessage>
</ValidationRule>