force-app/main/default/objects/Book__c/validationRules/BookTitle_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>BookTitle_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( BookTitle__c )</errorConditionFormula>
    <errorDisplayField>BookTitle__c</errorDisplayField>
    <errorMessage>BookTitle requried</errorMessage>
</ValidationRule>