force-app/main/default/objects/Book__c/validationRules/Price_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_rules</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Price__c &lt; 500,Price__c &gt; 15000)</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>BookPrice must be in range 500 to 15000.</errorMessage>
</ValidationRule>