force-app/main/default/objects/Book__c/validationRules/Type_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Type is  requried</errorMessage>
</ValidationRule>